<resources>
    <string name="app_name">KalkulatorBidang</string>
    <string name="kalkulatorrizal">Kalkulator Rizal</string>
    <string name="_0">0</string>
    <string name="hitung">Hitung</string>
    <string name="tambah">Tambah</string>
    <string name="kurang">Kurang</string>
    <string name="kali">Kali</string>
    <string name="bagi">Bagi</string>
    <string name="textview">TextView</string>
</resources>
